Bug#1-Fix-comment-design

--- a/index.html
+++ b/index.html
@@ -176,38 +176,34 @@
       <h2 class="portfolios__title">Some recent projects</h2>
       <p class="portfolios__description">Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim</p>
       <div class="portfolios__list">
-        <div class="project"><img class="project__img" src="images/pj-clip.JPG" alt="paperclips"/>
-          <div class="project__content">
-            <div class="project__detail">
-              <h3 class="project__title"><a href="#">paperclips</a></h3>
-              <p class="project__description">branding</p>
-            </div>
-          </div>
-        </div>
-        <div class="project"><img class="project__img" src="images/pj-pencil.JPG" alt="crayons"/>
-          <div class="project__content">
-            <div class="project__detail">
-              <h3 class="project__title"><a href="#">crayons</a></h3>
-              <p class="project__description">branding</p>
-            </div>
-          </div>
-        </div>
-        <div class="project"><img class="project__img" src="images/pj-umbrella.JPG" alt="umbrella"/>
-          <div class="project__content">
-            <div class="project__detail">
-              <h3 class="project__title"><a href="#">umbrella</a></h3>
-              <p class="project__description">branding</p>
-            </div>
-          </div>
-        </div>
-        <div class="project"><img class="project__img" src="images/pj-surface-hydrant.JPG" alt="surface hydrant"/>
-          <div class="project__content">
-            <div class="project__detail">
-              <h3 class="project__title"><a href="#">surface hydrant</a></h3>
-              <p class="project__description">branding</p>
-            </div>
-          </div>
-        </div>
+        <div class="project"><a href="#"><img class="project__img" src="images/pj-clip.JPG" alt="paperclips"/></a><a href="#">
+            <div class="project__content">
+              <div class="project__detail">
+                <h3 class="project__title">paperclips</h3>
+                <p class="project__description">branding</p>
+              </div>
+            </div></a></div>
+        <div class="project"><a href="#"><img class="project__img" src="images/pj-pencil.JPG" alt="crayons"/></a><a href="#">
+            <div class="project__content">
+              <div class="project__detail">
+                <h3 class="project__title">crayons</h3>
+                <p class="project__description">branding</p>
+              </div>
+            </div></a></div>
+        <div class="project"><a href="#"><img class="project__img" src="images/pj-umbrella.JPG" alt="umbrella"/></a><a href="#">
+            <div class="project__content">
+              <div class="project__detail">
+                <h3 class="project__title">umbrella</h3>
+                <p class="project__description">branding</p>
+              </div>
+            </div></a></div>
+        <div class="project"><a href="#"><img class="project__img" src="images/pj-surface-hydrant.JPG" alt="surface hydrant"/></a><a href="#">
+            <div class="project__content">
+              <div class="project__detail">
+                <h3 class="project__title">surface hydrant</h3>
+                <p class="project__description">branding</p>
+              </div>
+            </div></a></div>
       </div>
       <div class="latest-project">
         <h3 class="latest-project__title">Latest from twitter</h3>
@@ -215,38 +211,34 @@
         <div class="latest-project__"><a class="latest-project__link" href="#">buff.ly/NC8gog</a></div>
       </div>
       <div class="portfolios__list">
-        <div class="project"><img class="project__img" src="images/pj-clip.JPG" alt="paperclips"/>
-          <div class="project__content">
-            <div class="project__detail">
-              <h3 class="project__title"><a href="#">paperclips</a></h3>
-              <p class="project__description">branding</p>
-            </div>
-          </div>
-        </div>
-        <div class="project"><img class="project__img" src="images/pj-pencil.JPG" alt="crayons"/>
-          <div class="project__content">
-            <div class="project__detail">
-              <h3 class="project__title"><a href="#">crayons</a></h3>
-              <p class="project__description">branding</p>
-            </div>
-          </div>
-        </div>
-        <div class="project"><img class="project__img" src="images/pj-umbrella.JPG" alt="umbrella"/>
-          <div class="project__content">
-            <div class="project__detail">
-              <h3 class="project__title"><a href="#">umbrella</a></h3>
-              <p class="project__description">branding</p>
-            </div>
-          </div>
-        </div>
-        <div class="project"><img class="project__img" src="images/pj-surface-hydrant.JPG" alt="surface hydrant"/>
-          <div class="project__content">
-            <div class="project__detail">
-              <h3 class="project__title"><a href="#">surface hydrant</a></h3>
-              <p class="project__description">branding</p>
-            </div>
-          </div>
-        </div>
+        <div class="project"><a href="#"><img class="project__img" src="images/pj-clip.JPG" alt="paperclips"/></a><a href="#">
+            <div class="project__content">
+              <div class="project__detail">
+                <h3 class="project__title">paperclips</h3>
+                <p class="project__description">branding</p>
+              </div>
+            </div></a></div>
+        <div class="project"><a href="#"><img class="project__img" src="images/pj-pencil.JPG" alt="crayons"/></a><a href="#">
+            <div class="project__content">
+              <div class="project__detail">
+                <h3 class="project__title">crayons</h3>
+                <p class="project__description">branding</p>
+              </div>
+            </div></a></div>
+        <div class="project"><a href="#"><img class="project__img" src="images/pj-umbrella.JPG" alt="umbrella"/></a><a href="#">
+            <div class="project__content">
+              <div class="project__detail">
+                <h3 class="project__title">umbrella</h3>
+                <p class="project__description">branding</p>
+              </div>
+            </div></a></div>
+        <div class="project"><a href="#"><img class="project__img" src="images/pj-surface-hydrant.JPG" alt="surface hydrant"/></a><a href="#">
+            <div class="project__content">
+              <div class="project__detail">
+                <h3 class="project__title">surface hydrant</h3>
+                <p class="project__description">branding</p>
+              </div>
+            </div></a></div>
       </div>
       <div class="portfolios__see-all"><a class="portfolios__link" href="#">See all <i class="fas fa-long-arrow-alt-right"></i></a></div>
     </section>
@@ -327,8 +319,8 @@
             <div class="post__thumbnail post__thumbnail--left" id="carousel-first">
               <div class="js-carousel-thumbnail">
                 <div class="post__wrapper-img"><img class="post__img" src="images/post-thumbnail.JPG" alt="Blog Thumbnail"/></div>
-                <div class="post__wrapper-img"><img class="post__img" src="images/post-thumbnail.JPG" alt="Blog Thumbnail"/></div>
-                <div class="post__wrapper-img"><img class="post__img" src="images/post-thumbnail.JPG" alt="Blog Thumbnail"/></div>
+                <div class="post__wrapper-img"><img class="post__img" src="images/pj-pencil.JPG" alt="Blog Thumbnail"/></div>
+                <div class="post__wrapper-img"><img class="post__img" src="images/pj-umbrella.JPG" alt="Blog Thumbnail"/></div>
               </div>
               <div class="post__arrow-control">
                 <button class="post__control-prev js-post-prev" type="button"><i class="fas fa-chevron-left"></i></button>
@@ -346,8 +338,8 @@
             <div class="post__thumbnail post__thumbnail--right" id="carousel-second">
               <div class="js-carousel-thumbnail">
                 <div class="post__wrapper-img"><img class="post__img" src="images/post-thumbnail.JPG" alt="Blog Thumbnail"/></div>
-                <div class="post__wrapper-img"><img class="post__img" src="images/post-thumbnail.JPG" alt="Blog Thumbnail"/></div>
-                <div class="post__wrapper-img"><img class="post__img" src="images/post-thumbnail.JPG" alt="Blog Thumbnail"/></div>
+                <div class="post__wrapper-img"><img class="post__img" src="images/pj-umbrella.JPG" alt="Blog Thumbnail"/></div>
+                <div class="post__wrapper-img"><img class="post__img" src="images/pj-clip.JPG" alt="Blog Thumbnail"/></div>
               </div>
               <div class="post__arrow-control">
                 <button class="post__control-prev js-post-prev" type="button"><i class="fas fa-chevron-left"></i></button>
@@ -358,15 +350,15 @@
             <div class="post__content">
               <p class="post__date">20 March 2014</p>
               <h3 class="post__title"><a class="post__link" href="#">Typi non habent claritatem insitam</a></h3>
-              <p class="post__detail js-post-detail">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui [...]</p>
+              <p class="post__detail js-post-detail">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui dignissim dignissim dignissim</p>
             </div>
           </article>
           <article class="row post">
             <div class="post__thumbnail post__thumbnail--left" id="carousel-third">
               <div class="js-carousel-thumbnail">
                 <div class="post__wrapper-img"><img class="post__img" src="images/post-thumbnail.JPG" alt="Blog Thumbnail"/></div>
-                <div class="post__wrapper-img"><img class="post__img" src="images/post-thumbnail.JPG" alt="Blog Thumbnail"/></div>
-                <div class="post__wrapper-img"><img class="post__img" src="images/post-thumbnail.JPG" alt="Blog Thumbnail"/></div>
+                <div class="post__wrapper-img"><img class="post__img" src="images/pj-pencil.JPG" alt="Blog Thumbnail"/></div>
+                <div class="post__wrapper-img"><img class="post__img" src="images/pj-umbrella.JPG" alt="Blog Thumbnail"/></div>
               </div>
               <div class="post__arrow-control">
                 <button class="post__control-prev js-post-prev" type="button"><i class="fas fa-chevron-left"></i></button>
