Bug#2-Fix-comment-design

--- a/index.html
+++ b/index.html
@@ -252,29 +252,23 @@
           <div class="member">
             <div class="member__header"><img class="member__avatar" src="images/member.JPG" alt="Mitchell Anderson">
               <div class="member__social"><a class="member__link-social" href="#t"><i class="fab fa-twitter"></i></a><a class="member__link-social" href="#fb"><i class="fab fa-facebook-f"></i></a><a class="member__link-social" href="#in"><i class="fab fa-linkedin-in"></i></a></div>
-            </div>
-            <div class="member__infor">
-              <div class="member__name"><a class="member__link" href="#">Mitchell Anderson</a></div>
-              <p class="member__position">Creative Director</p>
-            </div>
+            </div><a class="member__infor" href="#">
+              <div class="member__name">Mitchell Anderson</div>
+              <p class="member__position">Creative Director</p></a>
           </div>
           <div class="member">
             <div class="member__header"><img class="member__avatar" src="images/member.JPG" alt="Mitchell Anderson">
               <div class="member__social"><a class="member__link-social" href="#t"><i class="fab fa-twitter"></i></a><a class="member__link-social" href="#fb"><i class="fab fa-facebook-f"></i></a><a class="member__link-social" href="#in"><i class="fab fa-linkedin-in"></i></a></div>
-            </div>
-            <div class="member__infor">
-              <div class="member__name"><a class="member__link" href="#">Mitchell Anderson</a></div>
-              <p class="member__position">Creative Director</p>
-            </div>
+            </div><a class="member__infor" href="#">
+              <div class="member__name">Mitchell Anderson</div>
+              <p class="member__position">Creative Director</p></a>
           </div>
           <div class="member">
             <div class="member__header"><img class="member__avatar" src="images/member.JPG" alt="Mitchell Anderson">
               <div class="member__social"><a class="member__link-social" href="#t"><i class="fab fa-twitter"></i></a><a class="member__link-social" href="#fb"><i class="fab fa-facebook-f"></i></a><a class="member__link-social" href="#in"><i class="fab fa-linkedin-in"></i></a></div>
-            </div>
-            <div class="member__infor">
-              <div class="member__name"><a class="member__link" href="#">Mitchell Anderson</a></div>
-              <p class="member__position">Creative Director</p>
-            </div>
+            </div><a class="member__infor" href="#">
+              <div class="member__name">Mitchell Anderson</div>
+              <p class="member__position">Creative Director</p></a>
           </div>
         </div>
       </div>
